--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ assignment2/sub4_session2/
 assignment2/sub6_session1/
 assignment2/sub7_session2/
 assignment2/sub9_session1/
+assignment3/assignment3-20191026T223103Z-001.zip
+assignment3/assignment3
